--- a/test.html
+++ b/test.html
@@ -1,19 +1,1 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>test</title>
-<style type="text/css">
-body,td,th {
-	color: #49FF00;
-}
-body {
-	background-color: #000000;
-}
-</style>
-</head>
-
-<body>
-a sdasdasd
-</body>
-</html>
+<iframe src="https://streamtape.com/e/0J3OJLdbKWSbPw1/" width="800" height="600" allowfullscreen allowtransparency allow="autoplay" scrolling="no" frameborder="0"></iframe>
